# dnd-charsheet

./: .gitignore  Cargo.toml  README.md  Vikri_the_Protector Aasimar_Paladin.charsheet  Vikrï_the_Protector Aasimar_Paladin.charsheet  gen_icon.sh  icon.rgba
docs/: dnd_charsheet.js  dnd_charsheet_bg.wasm  index.html
docs/sh/: build.sh  configure.sh  serve.sh  test.sh
src/: app.rs  character.rs  lib.rs  main.rs  style.ron
src/character/: abilities.rs  background.rs  class.rs  feats.rs  item.rs  items.rs  mod.rs  proficiency.rs  race.rs  skills.rs  spell.rs
src/compendium/: backgrounds.rs  character.rs  classes.rs  feats.rs  items.rs  mod.rs  races.rs  spells.rs
src/compendium/SRD/: backgrounds.ron  backgrounds.rs  classes.ron  classes.rs  feats.ron  items.ron  mod.rs  monsters.ron  races.ron  races.rs  spells.ron
src/compendium/homebrew/: backgrounds.ron  classes.ron  races.ron
src/pages/: actions.rs  display.rs  edit.rs  equipment.rs  home.rs  mod.rs  spells.rs
src/widgets/: ability_scores.rs  mod.rs
web/: start_server.sh
