[package]
name = "dnd_charsheet"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14.0"
serde = { version = "1", features = ["derive"] }
ron = "0.6"

[features]
default = ["persistence"]
http = ["eframe/http"]
persistence = ["eframe/persistence"]

[profile.release]
opt-level = 2

[[bin]]
name = "main"
path = "src/main.rs"