[package]
name = "dnd_charsheet"
version = "0.1.0"
authors = ["Jeremy Meadows <jeremybmeadows@gmail.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.14", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
ron = "0.6"

[features]
default = []
http = ["eframe/http"]

[profile.release]
opt-level = 2

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"
